Style left side of form

--- a/index.html
+++ b/index.html
@@ -7,18 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <div><img src="assets/odin-lined.png" alt="Logo of the Odin Project">Odin</div>
-        <p>Photo by <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">Halie West</a> on Unsplash</p>
+    <div class="left-side">
+        <div class="logo-container"><img src="assets/odin-lined.png" alt="Logo of the Odin Project" class="logo">Odin</div>
+        <p class="copyright">Photo by <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">Halie West</a> on Unsplash</p>
     </div>
     <div>
         <div>
             <p>This is not a real online service! You know you need something</p>
             <p>like this in your life to help you realize your deepest dreams.</p>
             <p>Sign up <em>now</em> to get started</p>
-            <p>You know you want to</p>
+            <p>You <em>know</em> you want to</p>
         </div>
-        <div></div>
+
+        <div>
+            <form action=""></form>
+        </div>
+
+        <button>Create an account</button>
+
+        <p>Already have an account? Log in</p>
     </div>
 </body>
 </html>
