Add form section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,38 @@
         </div>
 
         <div>
-            <form action=""></form>
+            <h1>Let's do this!</h1>
+            <form method="get" action="">
+                <div class="form-column">
+                    <div>
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" id="first-name" name="user-first-name">
+                    </div>
+                    <div>
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email" name="user-email">
+                    </div>
+                    <div>
+                        <label for="pwd">PASSWORD</label>
+                        <input type="password" id="pwd" name="user-password">
+                    </div>
+                </div>
+
+                <div class="form-column">
+                    <div>
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" id="last-name" name="user-last-name">
+                    </div>
+                    <div>
+                        <label for="number">PHONE NUMBER</label>
+                        <input type="tel" name="user-number" id="number">
+                    </div>
+                    <div>
+                        <label for="pwd2">CONFIRM PASSWORD</label>
+                        <input type="password" id="pwd2" name="confirm-password">
+                    </div>
+                </div>
+            </form>
         </div>
 
         <button>Create an account</button>
