--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
         <div class="logo-container"><img src="assets/odin-lined.png" alt="Logo of the Odin Project" class="logo">Odin</div>
         <p class="copyright">Photo by <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">Halie West</a> on Unsplash</p>
     </div>
-    <div>
-        <div>
+    <div class="right-side">
+        <div class="text">
             <p>This is not a real online service! You know you need something</p>
             <p>like this in your life to help you realize your deepest dreams.</p>
             <p>Sign up <em>now</em> to get started</p>
             <p>You <em>know</em> you want to</p>
         </div>
 
-        <div>
-            <h1>Let's do this!</h1>
+        <div class="form-holder">
+            <h1 class="form-title">Let's do this!</h1>
             <form method="get" action="">
                 <div class="form-column">
                     <div>
@@ -33,7 +33,7 @@
                     </div>
                     <div>
                         <label for="pwd">PASSWORD</label>
-                        <input type="password" id="pwd" name="user-password">
+                        <input type="password" id="pwd" name="user-password" required>
                     </div>
                 </div>
 
@@ -48,7 +48,7 @@
                     </div>
                     <div>
                         <label for="pwd2">CONFIRM PASSWORD</label>
-                        <input type="password" id="pwd2" name="confirm-password">
+                        <input type="password" id="pwd2" name="confirm-password" required>
                     </div>
                 </div>
             </form>
