--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
         <p class="copyright">Photo by <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">Halie West</a> on Unsplash</p>
     </div>
     <div class="right-side">
-        <div class="text">
+        <div class="text-holder">
             <p>This is not a real online service! You know you need something</p>
             <p>like this in your life to help you realize your deepest dreams.</p>
             <p>Sign up <em>now</em> to get started</p>
-            <p>You <em>know</em> you want to</p>
         </div>
+
+        <p class="stand-alone-text">You <em>know</em> you want to</p>
 
         <div class="form-holder">
             <h1 class="form-title">Let's do this!</h1>
