--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <button>Create an account</button>
 
-        <p>Already have an account? Log in</p>
+        <p class="account-text">Already have an account? <span class="log-in">Log in</span></p>
     </div>
 </body>
 </html>
