--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                     <div>
                         <label for="pwd">PASSWORD</label>
-                        <input type="password" id="pwd" name="user-password" required>
+                        <input type="password" id="pwd" name="user-password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$">
                     </div>
                 </div>
 
@@ -49,7 +49,7 @@
                     </div>
                     <div>
                         <label for="pwd2">CONFIRM PASSWORD</label>
-                        <input type="password" id="pwd2" name="confirm-password" required>
+                        <input type="password" id="pwd2" name="confirm-password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$">
                     </div>
                 </div>
             </form>
